fix: add new endpoint GET_AGENCY_BY_TENANT_ID for superadmins